Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12855

Invalid calls to LoadLibrary(Ex) during Office 2010 installation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.5
    • NTCore, Win32SS
    • None
    • ReactOS r73999 MSVC build

    Description

      Invalid calls to LoadLibrary(Ex) from ActCtx code during Office 2010 installation.

      (H:\trunk\reactos_clean\dll\win32\kernel32\client\loader.c:384) LoadLibraryExW(????????????????????????) failing with status c0000135
      fixme:(C:\Buildslave\Build_MSVC_x86\build\reactos\dll\win32\usp10\opentype.c:957)   TODO: subtype 2 (Class-based Chaining Context Glyph Substitution)
      fixme:(C:\Buildslave\Build_MSVC_x86\build\reactos\dll\win32\riched20\editor.c:3417) EM_SETEDITSTYLE: stub
      fixme:(C:\Buildslave\Build_MSVC_x86\build\reactos\dll\win32\riched20\editor.c:3416) EM_SETBIDIOPTIONS: stub
      (H:\trunk\reactos_clean\win32ss\user\ntuser\class.c:1441) err: Class "RICHEDIT60W" not found
      (H:\trunk\reactos_clean\win32ss\user\ntuser\window.c:1926) err: Failed to find class RICHEDIT60W
      (H:\trunk\reactos_clean\win32ss\user\ntuser\window.c:2516) err: co_UserCreateWindowEx failed!
      Access violation - code c0000005 (first chance)
      First chance exceptions are reported before any exception handling.
      This exception may be expected and handled.
      001b:7c93761e 813a41634d67    cmp     dword ptr [edx],674D6341h
      kd> .reload
      Connected to Windows Server 2003 3790 x86 compatible target at (Tue Feb 28 20:27:17.658 2017 (UTC + 1:00)), ptr64 FALSE
      Loading Kernel Symbols
      .......................................................
      Loading User Symbols
      ................................................
      *** ERROR: Symbol file could not be found.  Defaulted to export symbols for OSETUP.DLL - 
      *** ERROR: Symbol file could not be found.  Defaulted to export symbols for setup.exe - 
      kd> kp
      ChildEBP RetAddr  
      0012b730 7c93ed90 ntdll!check_actctx(void * h = 0x00000010)+0x5e [h:\trunk\reactos_clean\sdk\lib\rtl\actctx.c @ 1082]
      0012b750 7c928246 ntdll!RtlFindActivationContextSectionString(unsigned long flags = 1, struct _GUID * guid = 0x00000000, unsigned long section_kind = 2, struct _UNICODE_STRING * section_name = 0x0012b7c0 "쉝???", void * ptr = 0x0012b778)+0x110 [h:\trunk\reactos_clean\sdk\lib\rtl\actctx.c @ 5341]
      0012b7d0 7c928ec3 ntdll!find_actctx_dll(wchar_t * libname = 0x0012b900 "쉝???", unsigned short * fullname = 0x00211308 "nj???")+0x36 [h:\trunk\reactos_clean\dll\ntdll\ldr\ldrutils.c @ 41]
      0012b800 7c929725 ntdll!LdrpResolveDllName(unsigned short * DllPath = 0x00211108 "D:\Microsoft Office Enterprise 2010 Corporate Final;.;C:\ReactOS\System32;C:\ReactOS\system;C:\ReactOS;.;C:\ReactOS\bin;C:\ReactOS\System32;C:\ReactOS;C:\ReactOS\System32\Wbem;C:\Program Files\samba\bin;C:\Program Files\samba\sbin;", unsigned short * DllName = 0x0012b900 "쉝???", struct _UNICODE_STRING * FullDllName = 0x0012b864 "nj???", struct _UNICODE_STRING * BaseDllName = 0x0012b898 "???")+0xa3 [h:\trunk\reactos_clean\dll\ntdll\ldr\ldrutils.c @ 677]
      0012b8d4 7c92adcc ntdll!LdrpMapDll(unsigned short * SearchPathA = 0x00211108 "D:\Microsoft Office Enterprise 2010 Corporate Final;.;C:\ReactOS\System32;C:\ReactOS\system;C:\ReactOS;.;C:\ReactOS\bin;C:\ReactOS\System32;C:\ReactOS;C:\ReactOS\System32\Wbem;C:\Program Files\samba\bin;C:\Program Files\samba\sbin;", unsigned short * DllPath2 = 0x00211108 "D:\Microsoft Office Enterprise 2010 Corporate Final;.;C:\ReactOS\System32;C:\ReactOS\system;C:\ReactOS;.;C:\ReactOS\bin;C:\ReactOS\System32;C:\ReactOS;C:\ReactOS\System32\Wbem;C:\Program Files\samba\bin;C:\Program Files\samba\sbin;", unsigned short * DllName = 0x0012b900 "쉝???", unsigned long * DllCharacteristics = 0x0012bdb4, unsigned char Static = 0x00 '', unsigned char Redirect = 0x00 '', struct _LDR_DATA_TABLE_ENTRY ** DataTableEntry = 0x0012bb30)+0x175 [h:\trunk\reactos_clean\dll\ntdll\ldr\ldrutils.c @ 1076]
      0012bb38 7c922a16 ntdll!LdrpLoadDll(unsigned char Redirected = 0x00 '', unsigned short * DllPath = 0x00211108 "D:\Microsoft Office Enterprise 2010 Corporate Final;.;C:\ReactOS\System32;C:\ReactOS\system;C:\ReactOS;.;C:\ReactOS\bin;C:\ReactOS\System32;C:\ReactOS;C:\ReactOS\System32\Wbem;C:\Program Files\samba\bin;C:\Program Files\samba\sbin;", unsigned long * DllCharacteristics = 0x0012bdb4, struct _UNICODE_STRING * DllName = 0x0012bdbc "쉝???", void ** BaseAddress = 0x0012bdc4, unsigned char CallInit = 0x01 '')+0x1dc [h:\trunk\reactos_clean\dll\ntdll\ldr\ldrutils.c @ 2484]
      0012bd84 7c769f61 ntdll!LdrLoadDll(unsigned short * SearchPathA = 0x00211108 "D:\Microsoft Office Enterprise 2010 Corporate Final;.;C:\ReactOS\System32;C:\ReactOS\system;C:\ReactOS;.;C:\ReactOS\bin;C:\ReactOS\System32;C:\ReactOS;C:\ReactOS\System32\Wbem;C:\Program Files\samba\bin;C:\Program Files\samba\sbin;", unsigned long * DllCharacteristics = 0x0012bdb4, struct _UNICODE_STRING * DllName = 0x0012bdbc "쉝???", void ** BaseAddress = 0x0012bdc4)+0x2d6 [h:\trunk\reactos_clean\dll\ntdll\ldr\ldrapi.c @ 400]
      0012bde0 7c769d92 kernel32!LoadLibraryExW(wchar_t * lpLibFileName = 0x7c92b23e "쉝???", void * hFile = 0x00000000, unsigned long dwFlags = 0)+0x1c1 [h:\trunk\reactos_clean\dll\win32\kernel32\client\loader.c @ 366]
      0012bdf4 7c524bb8 kernel32!LoadLibraryW(wchar_t * lpLibFileName = 0x7c92b23e "쉝???")+0x12 [h:\trunk\reactos_clean\dll\win32\kernel32\client\loader.c @ 181]
      0012c070 7c54c1d5 user32!VersionRegisterClass(wchar_t * pszClass = 0x008375d0 "RICHEDIT60W", wchar_t * lpLibFileName = 0x7c92b23e "쉝???", void * Contex = 0x00000010, struct HINSTANCE__ ** phLibModule = 0x0012c100)+0xa8 [h:\trunk\reactos_clean\win32ss\user\user32\windows\class.c @ 211]
      0012c148 7c54c8b8 user32!User32CreateWindowEx(unsigned long dwExStyle = 0, char * lpClassName = 0x008375d0 "R", char * lpWindowName = 0x00000000 "", unsigned long dwStyle = 0x50000088, int x = 0n0, int y = 0n0, int nWidth = 0n0, int nHeight = 0n0, struct HWND__ * hWndParent = 0x0009013a, struct HMENU__ * hMenu = 0x00000001, struct HINSTANCE__ * hInstance = 0x00000000, void * lpParam = 0x00000000, unsigned long dwFlags = 0)+0x375 [h:\trunk\reactos_clean\win32ss\user\user32\windows\window.c @ 310]
      0012c1c8 009814d2 user32!CreateWindowExW(unsigned long dwExStyle = 0, wchar_t * lpClassName = 0x008375d0 "RICHEDIT60W", wchar_t * lpWindowName = 0x00000000 "", unsigned long dwStyle = 0x50000088, int x = 0n0, int y = 0n0, int nWidth = 0n0, int nHeight = 0n0, struct HWND__ * hWndParent = 0x0009013a, struct HMENU__ * hMenu = 0x00000001, struct HINSTANCE__ * hInstance = 0x00000000, void * lpParam = 0x00000000)+0x308 [h:\trunk\reactos_clean\win32ss\user\user32\windows\window.c @ 587]
      WARNING: Stack unwind information not available. Following frames may be wrong.
      0012c230 009dff74 OSETUP!NetUI::BaseValue::AddRef+0xf5c6
      0012c27c 009de7e4 OSETUP!NetUI::BaseValue::Release+0x28aba
      0012c29c 009dee3a OSETUP!NetUI::BaseValue::Release+0x2732a

      Attachments

        Issue Links

          Activity

            People

              Smiley Giannis Adamopoulos
              hbelusca hbelusca
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: