[USER32]: Now for the real fix: Initialize lpLibFileName and pCtx in User32CreateWindowEx prior to calling ClassNameToVersion. This avoid passing invalid parameters to VersionRegisterClass (and subsequent functions) afterwards. Fix suggested by Mark Jansen, thanks! CORE-12855

svn path=/trunk/; revision=74018